# Ideapad-Vantage

./: README.md  meson.build
data/: ideapadvantage-launcher  ideapadvantage-pkexec  ideapadvantage.policy
src/: main.vala  meson.build
